Updating blog post styles, fixing alignment issues, and other mobile improvements

--- a/src/styles/blog.scss
+++ b/src/styles/blog.scss
@@ -1,41 +1,3 @@
-.bio-container {
-	position: relative;
-	background: url("./teaching-pic.jpg" ) center center no-repeat;
-	background-size: cover;
-	width: 100%;
-	height: 500px;
-	display: flex;
-	padding: 24px;
-	box-sizing: border-box;
-	align-items: flex-end;
-	justify-content: center;
-	margin: 0 auto;
-}
-.shade {
-	background: rgba(0,0,0,0.3);
-	width: 100%;
-	height: 100%;
-	position: absolute;
-	top: 0;
-	left: 0;
-	z-index: 0;
-}
-
-.teaching-pic {
-	width: 100%;
-	display: none;
-}
-.personal_tag_line {
-	color: #fff;
-	font-size: 2.2rem;
-	letter-spacing: 1.6px;
-	line-height: 3.2rem;
-	margin: 0;
-	max-width: 800px;
-	position: relative;
-	z-index: 1;
-}
-
 /* Post */
 .post_container {
 	max-width: 800px;
@@ -64,12 +26,6 @@
 .blog_entries {
 	padding: 16px;
 	box-sizing: border-box;
-	// &:nth-child(even) {
-	// 	background: #E0E0E0;
-	// }
-	// &:nth-child(odd){
-	// 	background: #EEE;
-	// }
 }
 .blog_entry_title {
 	margin: 0;
@@ -87,22 +43,9 @@
 			color: #1C2A32;
 		}
 	}
-	// margin: 0;
-	// a {
-	// 	text-transform: none;
-	// 	color: #1C2A32;
-	// 	&:visited {
-	// 		color: #1C2A32;
-	// 	}
-	// 	&:hover {
-	// 		color: #1C2A32;
-	// 	}
-	// }
 }
 
 .blog_entry_date {
-	// color: rgba(0,0,0,.54);
-	// font-size: 0.8em;
 	font-family: KarminaSans-Bold;
 	font-size: 14px;
 	color: #EA4545;
